@@ -1,6 +1,8 @@
 ###### TWE 5.2-3 RELEASED ######
 2015-12-08 Sasa Bojanic <sasaboy@together.at>
-   # Shark mode: Improved support for TSCToolAgent
+   # Shark mode: 
+      - Improved support for TSCToolAgent
+      - Improved support for XSLTToolAgent
 
 2015-12-04 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: Added support for TSCToolAgent
